# stardust

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  mypy.yml  ruff.yml  test.yml
docs/: 3D_VISUALIZATION.md  WANDB_SETUP.md
examples/: refinement_with_tracking.py  simple_refinement.py
src/stardust/: __init__.py
src/stardust/losslab/: __init__.py  base.py  mse.py  settings.py
src/stardust/refinementlogger/: __init__.py  checkpoint.py  config.py  engine.py  metrics.py  trajectory.py  wandb_logger.py
src/stardust/structure/: __init__.py  align.py  modify.py  structure.py
src/stardust/utils/: __init__.py  decorators.py  geometry.py  map_utils.py
test/: test_checkpoint.py  test_geometry.py  test_metrics.py
