[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-stardust"
dynamic = ["version"]
description = "Losses and tools for coordinate refinement"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "RS-Station" }
]
keywords = ["crystallography", "refinement", "machine-learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "gemmi>=0.6.0",
    "mdtraj>=1.9.7",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

wandb = [
    "wandb>=0.22.3",
]

CI = [
    "ruff",
    "pre-commit>=4.0.0",
    "mypy>=1.20.1",
]

[project.urls]
Homepage = "https://github.com/rs-station/stardust"
Repository = "https://github.com/rs-station/stardust"
Issues = "https://github.com/rs-station/stardust/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/stardust/_version.py"

# --- Ruff Linting Configuration ---
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["stardust"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
